[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
venv_tools = "^0.2.2"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
requests = "^2.27.1"
Pillow = "^9.1.1"
bs4 = "^0.0.1"
html5lib = "^1.1"
json5 = "^0.9.8"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"